# infinity

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Makefile  README.md  compose.yml  xmake.lua
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd.yml  ci.yml  docker.yml
src/: config_parser.cpp  config_parser.h  main.cpp  str_tools.cpp  str_tools.h
